src/assets/main.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100..900&family=Noto+Sans+TC:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
@import 'tailwindcss';

body {
  font-family: 'Noto Sans HK', 'Noto Sans', sans-serif;
}

#app {
  margin: 0 auto;
  padding: 2rem;
  font-weight: normal;
  width: 100%;
}

